force-app/main/default/objects/Accumulator_Condition__c/Accumulator_Condition__c.object-meta.xml
<CustomObject>
    <label>Consumption Schedule Condition</label>
    <nameField>
        <displayFormat>CSC-{00000}</displayFormat>
        <label>Consumption Schedule Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumption Schedule Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>