force-app/main/default/objects/Accumulator_Condition__c/fields/FIN_Consumption_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_Consumption_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Consumption Schedule</label>
    <referenceTo>ConsumptionSchedule</referenceTo>
    <relationshipName>Accumulator_Conditions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>