force-app/main/default/objects/Accumulator_Condition__c/fields/FIN_Library_Association__c.field-meta.xml
<CustomField>
    <fullName>FIN_Library_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Either Apply the Conditions or select a Library Association</description>
    <inlineHelpText>Either Apply the Conditions or select a Library Association</inlineHelpText>
    <label>Library Association</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Consumption Schedule Conditions</relationshipLabel>
    <relationshipName>Library_Association_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>