force-app/main/default/objects/Accumulator_Condition__c/fields/FIN_Number__c.field-meta.xml
<CustomField>
    <fullName>FIN_Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>