force-app/main/default/objects/Accumulator_Condition__c/fields/FIN_Object_Attribute__c.field-meta.xml
<CustomField>
    <fullName>FIN_Object_Attribute__c</fullName>
    <label>Object Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Number</fullName>
            </value>
            <value>
                <fullName>Adjustment_Amount__c</fullName>
                <label>Adjustment Amount</label>
            </value>
            <value>
                <fullName>ApprovalStatus__c</fullName>
                <label>Approval Status</label>
            </value>
            <value>
                <fullName>FIN_BaseComp_Total_NoTax__c</fullName>
                <label>BaseComp Total No Tax</label>
            </value>
            <value>
                <fullName>FIN_BaseCompGrandTotal__c</fullName>
                <label>Base Comp Grand Total</label>
            </value>
            <value>
                <fullName>FIN_Channel__c</fullName>
                <label>Channel</label>
            </value>
            <value>
                <fullName>ContractName</fullName>
                <label>Contract Name</label>
            </value>
            <value>
                <fullName>SBQQ__ContractingMethod__c</fullName>
                <label>Contracting Method</label>
            </value>
            <value>
                <fullName>FIN_CurrentPaidAmount__c</fullName>
                <label>Current Paid Amount</label>
            </value>
            <value>
                <fullName>FIN_CustomerID__c</fullName>
                <label>Customer ID</label>
            </value>
            <value>
                <fullName>FIN_Entity_ID__c</fullName>
                <label>Entity ID</label>
            </value>
            <value>
                <fullName>FIN_Entity_Name__c</fullName>
                <label>Entity Name</label>
            </value>
            <value>
                <fullName>FIN_EventZoneGlCode__c</fullName>
                <label>Event Zone GL Code</label>
            </value>
            <value>
                <fullName>FIN_FinancialAdjCount__c</fullName>
                <label>Financial Adj Count</label>
            </value>
            <value>
                <fullName>FIN_GLCode__c</fullName>
                <label>GL Code</label>
            </value>
            <value>
                <fullName>Invoices_Status__c</fullName>
                <label>Invoices Status</label>
            </value>
            <value>
                <fullName>FIN_Journalizing_Status__c</fullName>
                <label>Journalizing Status</label>
            </value>
            <value>
                <fullName>FIN_MOD__c</fullName>
                <label>MOD</label>
            </value>
            <value>
                <fullName>FIN_MODType__c</fullName>
                <label>MOD Type</label>
            </value>
            <value>
                <fullName>FIN_OfferLookup__c</fullName>
                <label>Offer Lookup</label>
            </value>
            <value>
                <fullName>FIN_OfferName__c</fullName>
                <label>Offer Name</label>
            </value>
            <value>
                <fullName>FIN_Offer_Type__c</fullName>
                <label>Offer Type</label>
            </value>
            <value>
                <fullName>FIN_Operator__c</fullName>
                <label>Operator</label>
            </value>
            <value>
                <fullName>FIN_OrderID__c</fullName>
                <label>Order ID</label>
            </value>
            <value>
                <fullName>FIN_Outlet__c</fullName>
                <label>Outlet</label>
            </value>
            <value>
                <fullName>SBQQ__PaymentTerm__c</fullName>
                <label>Payment Term</label>
            </value>
            <value>
                <fullName>PoNumber</fullName>
                <label>PO Number</label>
            </value>
            <value>
                <fullName>SBQQ__PriceCalcStatus__c</fullName>
                <label>Price Calc Status</label>
            </value>
            <value>
                <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
                <label>Price Calc Status Message</label>
            </value>
            <value>
                <fullName>FIN_PriceCode__c</fullName>
                <label>Price Code</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>