force-app/main/default/objects/Accumulator_Condition__c/fields/FIN_Value__c.field-meta.xml
<CustomField>
    <fullName>FIN_Value__c</fullName>
    <label>Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>