force-app/main/default/objects/Accumulator_Condition__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>Either Apply the Conditions or select a Library Association</inlineHelpText>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIN_Payment__c</fullName>
                <label>Payment</label>
            </value>
            <value>
                <fullName>FIN_PaymentDistribution__c</fullName>
                <label>Payment Distribution</label>
            </value>
            <value>
                <fullName>FIN_SalesTransactions__c</fullName>
                <label>Sales Transaction</label>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Financial Code</fullName>
                <isActive>false</isActive>
                <label>Financial Code</label>
            </value>
            <value>
                <fullName>Library Association</fullName>
                <isActive>false</isActive>
                <label>Library Association</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>