force-app/main/default/objects/Accumulator_Condition__c/validationRules/Prevent_Operator_and_Value_for_LA.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Operator_and_Value_for_LA</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(FIN_Object_Attribute__c) = &apos;FIN_LibraryAssociation__c&apos; &amp;&amp;  (!ISBLANK(TEXT(Operator__c)) || !ISBLANK( FIN_Value__c ))</errorConditionFormula>
    <errorMessage>Please clear out &quot;Operator&quot; and &quot;Value&quot; fields when Object Attribute is selected as &quot;Library Association&quot;</errorMessage>
</ValidationRule>